fix: enhance frontend API debugging and fix login flow
- Add explicit backend URL configuration (192.168.2.1:8001)
- Remove proxy from package.json to use explicit REACT_APP_BACKEND_URL
- Add comprehensive API request/response logging for debugging
- Add timeout configuration (10 seconds) to API requests
- Add enhanced error logging in LoginScreen component
- Add React Router v7 future flags to prevent deprecation warnings
- Update HTML to include note about Tailwind CSS production setup
- Verify login flow works with test credentials (+919876543210/sim123)

Frontend now successfully connects to backend API and authenticates users.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>FDT - Fraud Detection</title>
     
-    <!-- Tailwind CSS CDN -->
+    <!-- Tailwind CSS CDN - For development only. For production, use @tailwindcss/postcss or Tailwind CLI -->
+    <!-- See: https://tailwindcss.com/docs/installation -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <style>
